# tangy

./: .gitignore  .gitlab-ci.yml  .wenv.json  404.html  LICENSE  MANIFEST.in  Makefile  README.md  Timetag Calibration Data1.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tangy.pyi
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml
api/: index.html
docs/: api.md  guided_tour.ipynb  index.md  license.md
guided_tour/: index.html
license/: index.html
scripts/: downloader.py
search/: search_index.json
tangy/: __init__.py  __init__.pyi  _tangy.pyi  _uqd.pyi  tangy.cp39-win_amd64.pyd  tangy.pyi
tangy/_ext/: _tangy.c  _tangy.pxd  _tangy.py  tangy.c  tangy.pxd  tangy.py
tangy/_ext/src/: .clang-format  base.h  clocked.h  clocked_buffer.h  picoquant_reader.c  picoquant_reader.h  ring_buffers.h  shared_memory.c  shared_memory.h  standard_buffer.h  tagbuffers.c  vector_impls.h
tangy/apps/: Timetag Calibration Data1.txt  gui_coincidence_counter.py  gui_uqd.py  uqd.py
tangy/tangy/: __init__.pyi
tangy_src/: __qutag.pxd  _ctimetag.pxd  _ctimetag.py  _qutag.pxd  _qutag.py  _tangy.c  _tangy.pxd  _tangy.py  _uqd.cpp  _uqd.pxd  _uqd.py  _uqd.pyx  backup.py.txt
tangy_src/src/: analysis_base.h  analysis_impl_clocked.h  analysis_impl_standard.h  base.h  bitflags.h  bitflags_tmpl.h  clocked_buffer.c  clocked_buffer.h  cross_buffer.c  custom_vectors.h  measurement.c  measurement.h  multi_vector.h  picoquant_reader.c  picoquant_reader.h  qutools_reader.h  ring_buffer_context.h  ring_buffer_old.h  ring_buffers.h  ringbuffer.h  ringbuffer_impls.h  shared_memory.c  shared_memory.h  shared_ring_buffer_context.h  shared_ring_buffers.h  standard_buffer.c  standard_buffer.h  tangy.h  test.c  uqd_bindings.cpp  uqd_bindings.h  vector.h
tests/: Timetag Calibration Data1.txt  test-connect.py  test-uqd.py
wheelhouse/: tangy-0.1.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
