#[tool.poetry]
[project]
name = "tangy"
version = "0.2.0"
description = "A library to manage timetags"
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
# exclude = [
#     "tangy/_ext/*",
#     "tangy/_ext/src/*",
#     "tangy/_ext/*.html"
#     ]
# include = [
#     "tangy/*.a",
#     "tangy/*.so",
#     "tangy/*.dll",
#     "tangy/*.lib",
# ]

[tool.setuptools.packages.find]
where = ["."]
include = ["tangy", "*.py*", "*.typed"]
exclude = ["opt"]
# exclude = [
#     "tangy/_ext",
#     ]

# [tool.poetry.dependencies]
# python = "^3.8"
# setuptools = "^69.1.1"
# cython = "^3.0.9"
# numpy = "^1.26.4"
# scipy = "^1.12.0"
# pytkdocs = "^0.16.1"

# [tool.poetry.group.docs.dependencies]
# mkdocs = "^1.4.2"
# mkdocs-material = "^8.5.10"
# mkdocstrings = "^0.23.0"
# mkdoxy = "^1.1.7"

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy", "mkdocs", "mkdocs-material", "mkdocstrings", "mkdoxy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y libusb libusb-devel",
    "pwd",
    "ls ./",
    "pip install requests",
    "mkdir opt",
    "python {package}/scripts/downloader.py",
    "ls ./opt",
    "cp ./opt/CTimeTag/Linux/libtimetag64.so /lib/libtimetag64.so",
]

[tool.cibuildwheel]
before-build = [
    "pip install requests",
    "mkdir opt",
    "python {package}/scripts/downloader.py",
    ]
skip = "pp"
archs = ["auto64"]
environment = { PATH="$PATH:./opt" }

build = [
#     "cp38-manylinux_x86_64",
    "cp39-manylinux_x86_64",
#     "cp310-manylinux_x86_64",
#     "cp311-manylinux_x86_64",
#     "cp38-macos_x86_64",
#     "cp38-macos_arm64",
#     "cp39-macos_x86_64",
#     "cp39-macos_arm64",
#     "cp310-macos_x86_64",
#     "cp310-macos_arm64",
#     "cp311-macos_x86_64",
#     "cp311-macos_arm64",
#     "cp38-win_amd64",
     "cp39-win_amd64",
#     "cp310-win_amd64",
#     "cp311-win_amd64",
    ]
