[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tangy"
version = "0.3.1"
description = "Timetag analysing library"
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
maintainers = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
keywords = []
license = {text = "GPLv2"}
dependencies = [
    "numpy",
    "scipy",
    "platformdirs", "customtkinter"
]

[project.optional-dependencies]
gui = ["customtkinter"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdoxy"
]

[project.urls]
Homepage = "https://gitlab.com/PeterBarrow/tangy"
# Documentation = ""
Repository = "https://gitlab.com/PeterBarrow/tangy.git"
Issues = "https://gitlab.com/PeterBarrow/tangy/-/issues"

[project.scripts]
tangy-list-buffers = "tangy:buffer_list_show"
tangy-close-all-buffers = "tangy:buffer_list_delete_all"
tangy-gui-uqdlogic16 = "tangy.apps.gui_uqd:run"
tangy-gui-coincidence-counter = "tangy.apps.gui_coincidence_counter:run"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y libusb libusb-devel",
    "pwd",
    "ls ./",
    "pip install requests",
    "mkdir opt",
    "python {package}/scripts/downloader.py",
    "ls ./opt",
    "cp ./opt/CTimeTag/Linux/libtimetag64.so /lib/libtimetag64.so",
]

[tool.setuptools.package-data]
"tangy" = ["py.typed", "_tangy.pyi", "_uqd.pyi"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tangy*", "*.py*", "*.typed"]
exclude = ["opt", "tangy_src"]

[tool.cibuildwheel]
before-build = [
    "pip install requests",
    "mkdir opt",
    "python {package}/scripts/downloader.py",
    ]
skip = "pp"
archs = ["auto64"]
environment = { PATH="$PATH:./opt" }

build = [
#     "cp38-manylinux_x86_64",
    "cp39-manylinux_x86_64",
#     "cp310-manylinux_x86_64",
#     "cp311-manylinux_x86_64",
#     "cp38-macos_x86_64",
#     "cp38-macos_arm64",
#     "cp39-macos_x86_64",
#     "cp39-macos_arm64",
#     "cp310-macos_x86_64",
#     "cp310-macos_arm64",
#     "cp311-macos_x86_64",
#     "cp311-macos_arm64",
#     "cp38-win_amd64",
     "cp39-win_amd64",
#     "cp310-win_amd64",
#     "cp311-win_amd64",
    ]
