[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tangy"
version = "0.8.0"
description = "Timetag analysing library"
authors = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
maintainers = [
    {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
]
readme = "README.md"
keywords = []
license = {text = "GPLv3"}
dependencies = [
    "numpy>=2.0.0",
    "scipy",
    "platformdirs",
    "customtkinter"
]

[project.optional-dependencies]
gui = ["customtkinter"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-jupyter",
    "mkdoxy"
]

[project.urls]
Homepage = "https://github.com/Peter-Barrow/tangy"
# Documentation = ""
Repository = "https://github.com/Peter-Barrow/tangy.git"
Issues = "https://github.com/Peter-Barrow/tangy/issues"

[project.scripts]
tangy-list-buffers = "tangy:buffer_list_show"
tangy-close-all-buffers = "tangy:buffer_list_delete_all"
tangy-gui-uqdlogic16 = "tangy.apps.gui_uqd:run"
tangy-gui-coincidence-counter = "tangy.apps.gui_coincidence_counter:run"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y libusb libusb-devel",
    "pwd",
    "ls ./",
    "pip install requests",
    "python {package}/scripts/downloader.py",
    "ls ./opt",
    "cp ./opt/CTimeTag/Linux/libtimetag64.so /lib/libtimetag64.so",
]
repair-wheel-command = "auditwheel repair --exclude libtimetag64.so -w {dest_dir} {wheel}"

[tool.setuptools.package-data]
"tangy" = ["py.typed", "_tangy.pyi", "_uqd.pyi"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tangy*", "*.py*", "*.typed"]
exclude = ["opt", "tangy_src"]

[tool.cibuildwheel]
before-build = [
    "pip install requests",
    "python {package}/scripts/downloader.py",
    ]
skip = "pp"
archs = ["auto64"]
environment = { PATH="$PATH:./opt"}

build = [
    "cp39-manylinux_x86_64",
    "cp310-manylinux_x86_64",
    "cp311-manylinux_x86_64",
    "cp312-manylinux_x86_64",
    "cp39-macosx_x86_64",
    "cp39-macosx_arm64",
    "cp310-macosx_x86_64",
    "cp310-macosx_arm64",
    "cp311-macosx_x86_64",
    "cp311-macosx_arm64",
    "cp39-win_amd64",
    "cp310-win_amd64",
    "cp311-win_amd64",
    "cp312-win_amd64",
    ]
